@@ -1,0 +1,4 @@
+/**
+ * Provides classes to support Micrometer.
+ */
+package org.springframework.kafka.support.micrometer;
