@@ -2333,7 +2333,7 @@ If you change the multicaster to use an async executor, thread cleanup is not ef
 [[micrometer]]
 ===== Monitoring Listener Performance
 
-Starting with version 2.3, the listener container will automatically create and update Micrometer `Timer` s for the listener, if `Micrometer` is detected on the class path, and a `MeterRegistry` is present in the application context.
+Starting with version 2.3, the listener container will automatically create and update Micrometer `Timer` s for the listener, if `Micrometer` is detected on the class path, and a single `MeterRegistry` is present in the application context.
 The timers can be disabled by setting the `ContainerProperty` `micrometerEnabled` to `false`.
 
 Two timers are maintained - one for successful calls to the listener and one for failures.
@@ -2347,6 +2347,21 @@ The timers are named `spring.kafka.listener` and have the following tags:
 You can add additional tags using the `ContainerProperties` `micrometerTags` property.
 
 NOTE: With the concurrent container, timers are created for each thread and the `name` tag is suffixed with `-n` where n is `0` to `concurrency-1`.
+
+===== Monitoring KafkaTemplate Performance
+
+Starting with version 2.5, the template will automatically create and update Micrometer `Timer` s for send operations, if `Micrometer` is detected on the class path, and a single `MeterRegistry` is present in the application context.
+The timers can be disabled by setting the template's `micrometerEnabled` property to `false`.
+
+Two timers are maintained - one for successful calls to the listener and one for failures.
+
+The timers are named `spring.kafka.template` and have the following tags:
+
+* `name` : (template bean name)
+* `result` : `success` or `failure`
+* `exception` : `none` or the exception class name for failures
+
+You can add additional tags using the template's `micrometerTags` property.
 
 [[transactions]]
 ==== Transactions
